traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:14: error: ')' expected but ';' found.
      else{setPos(0;diag+1)
                   ^TraversalDiagonal:14: error: ';' expected but ')' found.
      else{setPos(0;diag+1)
                          ^TraversalDiagonal:23: error: ')' expected but ';' found.
      setPos(diag+1;6)
                   ^TraversalDiagonal:23: error: ';' expected but ')' found.
      setPos(diag+1;6)
                     ^